# jsoncpl

./: Cargo.toml  README.md
.github/workflows/: ci.yml  create-release.yml  tagged-release.yml  test.yml
src/: cli.rs  io.rs  main.rs  natural_sort.rs  parser.rs  util.rs
src/checks/: entry_parity.rs  file_parity.rs  file_style.rs  mod.rs
src/parser/: generator.rs  mod.rs  model.rs  parser.rs
testdata/json/: test1.json  test2.json  test3.json  test4.json
