[package]
name = "jsoncpl"
version = "0.3.0"
edition = "2021"
authors = [ "Leon Camus" ]

[dependencies]
nom = "7.1"
nom_locate = "4.0"
similar = "2.2"
colour = "0.6"
clap = { version = "4.0", features = ["derive"] }
pathdiff = "0.2"
unescape = "0.1"
snailquote = "0.3"

[dev-dependencies]
indexmap = "1.9"
serde_json = { version = "1.0", features = ["preserve_order"] }

[profile.release]
lto = true
debug = false
codegen-units = 1
panic = "abort"
