[package]
name = "jsoncpl"
version = "1.1.4"
edition = "2021"
authors = [ "Leon Camus" ]

[dependencies]
nom = "7"
nom_locate = "4"
similar = "2"
colored = "2"
clap = { version = "4", features = ["derive"] }
pathdiff = "0"
unescape = "0"
snailquote = "0"
num-bigint = "0"

[dev-dependencies]
indexmap = "1.9"
serde_json = { version = "1.0", features = ["preserve_order"] }

[profile.release]
lto = true
debug = false
codegen-units = 1
panic = "abort"
