[package]
name = "jsoncpl"
version = "1.1.6"
edition = "2021"
authors = [ "Leon Camus" ]

[dependencies]
nom = "7"
nom_locate = "4"
colored = "2"
clap = { version = "4", features = ["derive"] }
pathdiff = "0"
num-bigint = "0"

[profile.release]
lto = true
debug = false
codegen-units = 1
panic = "abort"
